# gamevault

./: .gitignore  LICENSE.txt  docker-compose.yml
docs/Final/: Kamil_Pomykała_L03_BazyDanychProjekt.typ
docs/Part 1/: Kamil_Pomykała_L03_BazyDanychProjekt01.typ
docs/Part 2/: Kamil_Pomykała_L03_BazyDanychProjekt02.typ
docs/Part 3/: Kamil_Pomykała_L03_BazyDanychProjekt03.typ
rust/: Cargo.toml
rust/src/: main.rs  ui.rs
rust/src/db/: schema.rs
rust/src/db/models/: game.rs
rust_orm/: Cargo.toml
rust_orm/src/: db.rs  main.rs  ui.rs  utils.rs
rust_orm/src/db/: models.rs  schema.rs
rust_orm/src/db/models/: category.rs  game.rs  game_review.rs  game_type.rs  mechanic.rs  user.rs
rust_orm/src/ui/: add_category_to_game.rs  create_game.rs  create_review.rs  log_in.rs  search.rs  search_games.rs  utils.rs
rust_orm/src/utils/: check_db_users.rs  login.rs  prompts.rs
simple_rust_postgres/: Cargo.toml
simple_rust_postgres/src/: main.rs
sql/: advanced_insert_data.sql  advanced_update_data.sql  create_tables.sql  example_advanced_selects.sql  example_selects.sql  functions.sql  insert_data.sql  install_bcrypt.txt  roles.sql
