[package]
name = "game_vault"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

# Terminal
terminal-menu = "3.0.0"
color-print = "0.3.6"
text_io = "0.1.12"
getch = "0.3.1"
inquire = { version = "0.7.5", features = ["editor"] }
